--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,6 +88,7 @@ whisper-rs = "0.15"
 font-loader = "0.11"
 async-openai = "0.29"
 ffmpeg-sidecar = "2.1"
+unicode-segmentation = "1.12"
 
 font = { path = "lib/font" }
 cutil = { path = "lib/cutil" }
