--- a/lib/transcribe/Cargo.toml
+++ b/lib/transcribe/Cargo.toml
@@ -20,6 +20,7 @@ chrono.workspace = true
 futures.workspace = true
 num_cpus.workspace = true
 whisper-rs.workspace = true
+unicode-segmentation.workspace = true
 reqwest = { workspace = true, features = ["stream"] }
 serde = { workspace = true, features = ["serde_derive"] }
 
