[*] use font-kit crate to get font-name and font-family

--- a/lib/font/Cargo.toml
+++ b/lib/font/Cargo.toml
@@ -11,4 +11,4 @@ repository.workspace = true
 description.workspace = true
 
 [dependencies]
-font-loader.workspace = true
+font-kit.workspace = true
