--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,7 +85,7 @@ num_cpus = "1.17"
 kittyaudio = "0.2"
 spin_sleep = "1.3"
 whisper-rs = "0.15"
-font-loader = "0.11"
+font-kit = "0.14"
 async-openai = "0.29"
 ffmpeg-sidecar = "2.1"
 unicode-segmentation = "1.12"
