[*] disable stdio on linux

--- a/whispercap/Cargo.toml
+++ b/whispercap/Cargo.toml
@@ -47,6 +47,7 @@ platform-dirs.workspace = true
 
 [target.'cfg(target_os = "linux")'.dependencies]
 duct.workspace = true
+libc.workspace = true
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger.workspace = true
